test/asm/empty-strings.err
error: empty-strings.asm(5):
    Strings as numbers must be a single charmap unit
Assembly aborted with 1 error!
