test/asm/empty-strings.asm
SECTION "test", ROM0
db ""
dw ""
dl ""
assert SIZEOF("test") == 0
